--- a/www/tpl/board.html.twig
+++ b/www/tpl/board.html.twig
@@ -2,7 +2,7 @@
 
 {% block body %}
     <div class="alert alert-warning" role="alert">
-        <h1>BOARDS</h1>
+        <h1>{{ settings.boards_title }}</h1>
     </div>
 
     <div>
