--- a/www/tpl/files.html.twig
+++ b/www/tpl/files.html.twig
@@ -2,6 +2,6 @@
 
 {% block body %}
     <div class="alert alert-warning" role="alert">
-        <h1>Dateien</h1>
+        <h1>{{ settings.files_title }}</h1>
     </div>
 {% endblock %}
