--- a/www/tpl/board.html.twig
+++ b/www/tpl/board.html.twig
@@ -1,8 +1,12 @@
 {% extends 'main.html.twig' %}
 
 {% block body %}
-    <div class="alert alert-warning" role="alert">
-        <h1>{{ settings.boards_title }}</h1>
+    <div class="row">
+        <div class="col-lg-12">
+            <div class="page-header">
+                <h1>{{ settings.boards_title }}</h1>
+            </div>
+        </div>
     </div>
 
     <div>
