--- a/www/tpl/news.html.twig
+++ b/www/tpl/news.html.twig
@@ -1,7 +1,13 @@
 {% extends 'main.html.twig' %}
 
 {% block body %}
-    <h1>{{ settings.news_title }}</h1>
+    <div class="row">
+        <div class="col-lg-12">
+            <div class="page-header">
+                <h1>{{ settings.news_title }}</h1>
+            </div>
+        </div>
+    </div>
 
     {% for post in news %}
         <div class="row mb-2">
