--- a/www/tpl/user.signup.html.twig
+++ b/www/tpl/user.signup.html.twig
@@ -1,7 +1,11 @@
 {% extends 'main.html.twig' %}
 
 {% block body %}
-    <div class="alert alert-warning" role="alert">
-        <h1>USER SIGNUP</h1>
+    <div class="row">
+        <div class="col-lg-12">
+            <div class="page-header">
+                <h1>{{ settings.user_signup_title }}</h1>
+            </div>
+        </div>
     </div>
 {% endblock %}
