--- a/www/htdocs/css/notfallpunkt.css
+++ b/www/htdocs/css/notfallpunkt.css
@@ -1,7 +1,7 @@
 :root {
-    --bs-pagination-active-color:red;
-    --bs-pagination-active-bg:blue;
-    --bs-pagination-active-border-color:orange;
+    --bs-pagination-active-color: red;
+    --bs-pagination-active-bg: blue;
+    --bs-pagination-active-border-color: orange;
 }
 
 body {
@@ -9,12 +9,12 @@ body {
 }
 
 .npdebug {
-    border:2px dashed #c40000;
-    margin:10px;
-    padding:10px;
-    font-family:Courier New,Monospace,Courier,Fixed,System;
-    color:white;
-    background-color:#333;
+    border: 2px dashed #c40000;
+    margin: 10px;
+    padding: 10px;
+    font-family: Courier New, Monospace, Courier, Fixed, System;
+    color: white;
+    background-color: #333;
 }
 
 .npdebug.sql {
@@ -22,7 +22,7 @@ body {
 }
 
 body.mode_test {
-    background-image:url(/img/tile-test.gif);
+    background-image: url(/img/tile-test.gif);
 }
 
 body.page-news #mainContent {
@@ -30,11 +30,23 @@ body.page-news #mainContent {
 }
 
 #testModeText {
-    color:red;
-    font-weight:bold;
-    display:none;
+    display: none;
 }
 
 body.mode_test #testModeText {
-    display:initial;
+    display: initial;
+}
+
+ul.nfpList {
+    list-style-type: none;
+    padding-left: 0;
+}
+
+nav span.nfp_update_count {
+    display: none;
+    margin-left: 0.2rem;
+}
+
+nav span.nfp_update_count.visible {
+    display: inline;
 }
