--- a/www/tpl/news.html.twig
+++ b/www/tpl/news.html.twig
@@ -1,5 +1,7 @@
 {% extends 'main.html.twig' %}
 
+{% block title %}{{ settings.news_title }} @ {{ sys.system.name }}{% endblock %}
+
 {% block body %}
     <div class="row">
         <div class="col-lg-12">
