--- a/www/tpl/user.list.html.twig
+++ b/www/tpl/user.list.html.twig
@@ -1,12 +1,12 @@
 {% extends 'main.html.twig' %}
 
-{% block title %}{{ settings.knowledge_title }} @ {{ sys.system.name }}{% endblock %}
+{% block title %}{{ settings.user_list_title }} @ {{ sys.system.name }}{% endblock %}
 
 {% block body %}
     <div class="row">
         <div class="col-lg-12">
             <div class="page-header">
-                <h1>{{ settings.knowledge_title }}</h1>
+                <h1>{{ settings.user_list_title }}</h1>
             </div>
         </div>
     </div>
