--- a/www/tpl/index.html.twig
+++ b/www/tpl/index.html.twig
@@ -1,39 +1,60 @@
 {% extends 'main.html.twig' %}
+{% import 'macros/macros.posts.html.twig' as macroPosts %}
 
 {% block title %}{{ sys.system.name }}{% endblock %}
 
 {% block body %}
     {% if settings.home_general_show %}
         <div class="alert alert-warning" role="alert">
-            {{ settings.home_general_title }}
+            {{ settings.home_general_title|nl2br }}
+        </div>
+    {% endif %}
+
+    {% if emergency_infos and settings.home_emergency_infos_show %}
+        <div class="card text-white bg-danger mb-3">
+            <div class="card-header">{{ settings.home_emergency_infos_title }}</div>
+            <div class="card-body">
+                {% set i = 0 %}
+                {% for info in emergency_infos %}
+                    {% if i == 0 %}
+                        <div class="row">
+                    {% endif %}
+                    <div class="col-md-6 mb-3">
+                        <strong>{{ info.title }}</strong>
+                        <br>
+                        {{ info.value }}
+                    </div>
+                    {% if i == 0 %}
+
+                        {% set i = 1 %}
+                    {% else %}
+                        </div>
+                        {% set i = 0 %}
+                    {% endif %}
+                {% endfor %}
+                {% if i == 1 %}</div>{% endif %}
+        </div>
         </div>
     {% endif %}
 
     {% if news_owner %}
         {% if settings.home_newsbox_show %}
-
             <div class="accordion" id="accordionNews">
                 <div class="accordion-item">
-                    <h2 class="accordion-header" id="headingOne">
+                    <h2 class="accordion-header" id="headingOneA">
                         <button class="accordion-button" type="button" data-bs-toggle="collapse"
-                                data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                                data-bs-target="#collapseOneA" aria-expanded="true" aria-controls="collapseOne">
                             {{ settings.home_newsbox_title }}
                         </button>
                     </h2>
-                    <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne"
+                    <div id="collapseOneA" class="accordion-collapse collapse show" aria-labelledby="headingOne"
                          data-bs-parent="#accordionExample" style="">
                         <div class="accordion-body">
-
                             <ul class="nfpList">
                                 {% for news in news_owner %}
                                     {% if news.title or news.content %}
                                         <li>
-                                            <small class="text-light nfp_ts" data-ts="{{ news.ts }}" title="{{ news.ts|date(settings.date_format_dmyhis) }}">{{ news.ts|date(settings.date_format_dmyhis) }}</small>
-                                            <br>
-                                            {% if news.title %}<strong>{{ news.title }}</strong>{% endif %}
-                                            <p>
-                                            {% if news.content %}{{ news.content }}{% endif %}
-                                            </p>
+                                            {{ macroPosts.message(news.ts, news.title, news.content) }}
                                         </li>
                                     {% endif %}
                                 {% endfor %}
@@ -44,25 +65,38 @@
                                     {{ settings.text_show_all }}
                                 </a>
                             {% endif %}
-
                         </div>
                     </div>
                 </div>
             </div>
-
         {% endif %}
     {% endif %}
 
     {% if infos and settings.home_infos_show %}
-        <div class="alert alert-success mt-4" role="alert">
-            <strong>{{ settings.home_infos_title }}</strong>
-            <ul>
-                {% for info in infos %}
-                    {% if info.text|trim %}
-                        <li>{{ info.text }}</li>
-                    {% endif %}
-                {% endfor %}
-            </ul>
+        <div class="accordion mt-3 nfp_accordionGreen" id="accordionInfos">
+            <div class="accordion-item">
+                <h2 class="accordion-header" id="headingOneB">
+                    <button class="accordion-button" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#collapseOneB" aria-expanded="true" aria-controls="collapseOneB">
+                        {{ settings.home_infos_title }}
+                    </button>
+                </h2>
+                <div id="collapseOneB" class="accordion-collapse collapse show" aria-labelledby="headingOneB"
+                     data-bs-parent="#accordionExample" style="">
+                    <div class="accordion-body">
+                        <ul class="nfp_list_noleftpad nfp_list_nomessagepadding">
+                            {% for info in infos %}
+                                {% if info.text|trim %}
+                                    <li>
+                                        {{ macroPosts.message(null, null, info.text) }}
+                                    </li>
+                                {% endif %}
+                            {% endfor %}
+                        </ul>
+                    </div>
+                </div>
+            </div>
         </div>
     {% endif %}
+
 {% endblock %}
