--- a/www/htdocs/css/notfallpunkt.css
+++ b/www/htdocs/css/notfallpunkt.css
@@ -60,3 +60,7 @@ ul.nfp_list_noleftpad {
 ul.nfp_list_nomessagepadding p {
     margin-bottom:0.2rem;
 }
+
+strong.nfp_title {
+    font-size:1.1rem;
+}
