--- a/www/tpl/index.html.twig
+++ b/www/tpl/index.html.twig
@@ -11,7 +11,7 @@
     {% endif %}
 
     {% if emergency_infos and settings.home_emergency_infos_show %}
-        <div class="card text-white bg-danger mb-3">
+        <div class="card text-white bg-danger mb-4">
             <div class="card-header">{{ settings.home_emergency_infos_title }}</div>
             <div class="card-body">
                 {% set i = 0 %}
@@ -20,9 +20,9 @@
                         <div class="row">
                     {% endif %}
                     <div class="col-md-6 mb-3">
-                        <strong>{{ info.title }}</strong>
+                        <strong class="nfp_title">{{ info.title }}</strong>
                         <br>
-                        {{ info.value }}
+                        {{ info.value|nl2br }}
                     </div>
                     {% if i == 0 %}
 
