--- a/www/tpl/main.html.twig
+++ b/www/tpl/main.html.twig
@@ -41,7 +41,7 @@
                 <ul class="navbar-nav me-auto mb-2 mb-sm-0">
                     <li class="nav-item">
                         <a class="nav-link{% if pageIndicator == 'home' %} active{% endif %}"{% if pageIndicator == 'home' %} aria-current="page"{% endif %}
-                           href="/">{{ settings.nav_home }}</a>
+                           href="/">{{ settings.nav_home }}<span class="badge rounded-pill bg-primary nfp_update_count" id="nfpUpdateCount_home">0</span></a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link{% if pageIndicator == 'news' %} active{% endif %}"{% if pageIndicator == 'news' %} aria-current="page"{% endif %}
