--- a/www/htdocs/css/notfallpunkt.css
+++ b/www/htdocs/css/notfallpunkt.css
@@ -64,3 +64,33 @@ ul.nfp_list_nomessagepadding p {
 strong.nfp_title {
     font-size:1.1rem;
 }
+
+
+/*** LOGIN FORM ***/
+.form-signin {
+    text-align:center;
+    width: 100%;
+    max-width: 330px;
+    padding: 15px;
+    margin: auto;
+}
+
+.form-signin .checkbox {
+    font-weight: 400;
+}
+
+.form-signin .form-floating:focus-within {
+    z-index: 2;
+}
+
+.form-signin input[type="email"] {
+    margin-bottom: -1px;
+    border-bottom-right-radius: 0;
+    border-bottom-left-radius: 0;
+}
+
+.form-signin input[type="password"] {
+    margin-bottom: 10px;
+    border-top-left-radius: 0;
+    border-top-right-radius: 0;
+}
