--- a/www/tpl/main.html.twig
+++ b/www/tpl/main.html.twig
@@ -8,9 +8,10 @@
         {% set themeFile = '/css/bootstrap.min.css' %}
     {% endif %}
     {% if settings.ext_minify_css %}
-        {{ minifyCss([themeFile, "/css/notfallpunkt.css"])|raw }}
+        {{ minifyCss([themeFile, "/css/font-awesome.min.css", "/css/notfallpunkt.css"])|raw }}
     {% else %}
         <link rel="stylesheet" href="/css/bootstrap.min.css">
+        <link rel="stylesheet" href="/css/font-awesome.min.css">
         <link rel="stylesheet" href="/css/notfallpunkt.css">
     {% endif %}
 
@@ -60,13 +61,13 @@
                            href="/knowledge">{{ settings.nav_knowledge }}<span class="badge rounded-pill bg-primary nfp_update_count" id="nfpUpdateCount_knowledge">0</span></a>
                     </li>
                     <li class="nav-item dropdown text-light">
-                        <a class="nav-link dropdown-toggle{% if pageIndicator == 'news' %} active{% endif %}" href="#"
-                           id="dropdown03" data-bs-toggle="dropdown" aria-expanded="false">{{ settings.nav_user }}<span class="badge rounded-pill bg-primary nfp_update_count" id="nfpUpdateCount_user">0</span></a>
+                        <a class="nav-link dropdown-toggle{% if pageIndicator == 'user' %} active{% endif %}{% if user %} text-primary{% endif %}" href="#"
+                           id="dropdown03" data-bs-toggle="dropdown" aria-expanded="false">{% if user %}{{ user.login }}{% else %}{{ settings.nav_user }}{% endif %}<span class="badge rounded-pill bg-primary nfp_update_count" id="nfpUpdateCount_user">0</span></a>
                         <ul class="dropdown-menu" aria-labelledby="dropdown03">
-                            <li><a class="dropdown-item" href="/users">{{ settings.nav_user_list }}</a></li>
-                            <li><a class="dropdown-item" href="/login">{{ settings.nav_user_login }}</a></li>
-                            <li><a class="dropdown-item" href="/signup">{{ settings.nav_user_signup }}</a></li>
-                            <li><a class="dropdown-item" href="/logout">{{ settings.nav_user_logout }}</a></li>
+                            {% if user %}<li><a class="dropdown-item" href="/users">{{ settings.nav_user_list }}</a></li>{% endif %}
+                            {% if not user %}<li><a class="dropdown-item" href="/login">{{ settings.nav_user_login }}</a></li>{% endif %}
+                            {% if not user %}<li><a class="dropdown-item" href="/signup">{{ settings.nav_user_signup }}</a></li>{% endif %}
+                            {% if user %}<li><a class="dropdown-item" href="/logout">{{ settings.nav_user_logout }}</a></li>{% endif %}
                         </ul>
                     </li>
                     {#
