--- a/www/tpl/main.html.twig
+++ b/www/tpl/main.html.twig
@@ -105,7 +105,7 @@
                     {% if settings.owner %}
                         -
                         <strong>Verantwortlich: </strong>
-                        {{ settings.owner }}
+                        <a href="/contact">{{ settings.owner }}</a>
                     {% endif %}
                     🕑 {{ 'now'|date("d.m.Y H:i:s") }} %%CACHE_INFO%%
                 </div>
