--- a/www/tpl/news.html.twig
+++ b/www/tpl/news.html.twig
@@ -6,7 +6,7 @@
     <div class="row">
         <div class="col-lg-12">
             <div class="page-header">
-                <h1>{{ settings.news_title }}</h1>
+                <h1>{{ settings.news_title }} ({{ paginator.resultCount }})</h1>
             </div>
         </div>
     </div>
@@ -28,6 +28,7 @@
         </div>
     {% endfor %}
 
+    {% if paginator.resultCount > settings.news_entries_per_page %}
     <nav aria-label="results-nav">
         <ul class="pagination justify-content-center">
             <li class="page-item{% if paginator.isFirstPage %} disabled{% endif %}">
@@ -47,5 +48,6 @@
             </li>
         </ul>
     </nav>
+    {% endif %}
 
 {% endblock %}
