--- a/www/tpl/user.list.html.twig
+++ b/www/tpl/user.list.html.twig
@@ -6,7 +6,7 @@
     <div class="row">
         <div class="col-lg-12">
             <div class="page-header">
-                <h1>{{ settings.user_list_title }}</h1>
+                <h1>{{ settings.user_list_title }} ({{ userCount }})</h1>
             </div>
         </div>
     </div>
@@ -23,7 +23,8 @@
                                 <span class="nfp_ts" data-ts="{{ usr.ts_last_login }}"
                                       title="{{ usr.ts_last_login|date("d.m.Y H:i:s") }}">{{ usr.ts_last_login|date("d.m.Y H:i:s") }}</span>
                             </p>
-                            <a class="btn btn-primary" href="/message/send?to={{ usr.login }}"><i class="fa fa-envelope"></i> {{ settings.user_profile_button_send_message }}</a>
+                            <a class="btn btn-primary" href="/message/send?to={{ usr.login }}"><i
+                                        class="fa fa-envelope"></i> {{ settings.user_profile_button_send_message }}</a>
                         </div>
                     </div>
                 </div>
@@ -42,6 +43,15 @@
                                     <span class="nfp_ts" data-ts="{{ usr.ts_last_login }}"
                                           title="{{ usr.ts_last_login|date("d.m.Y H:i:s") }}">{{ usr.ts_last_login|date("d.m.Y H:i:s") }}</span>
                                 {% endif %}
+                                <div class="mt-3">
+                                    <a class="btn btn-primary" href="/message/send?to={{ usr.login }}"><i
+                                                class="fa fa-envelope"></i> {{ settings.user_profile_button_send_message }}
+                                    </a>
+                                    &nbsp;
+                                    <a class="btn btn-primary" href="/message/admin?rel={{ usr.login }}&type=complaint"><i
+                                                class="fa fa-envelope"></i> {{ settings.user_profile_button_complain }}
+                                    </a>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -49,5 +59,27 @@
             </div>
         {% endif %}
     {% endfor %}
+
+    {% if userCount > settings.user_profiles_per_page %}
+        <nav aria-label="results-nav">
+            <ul class="pagination justify-content-center">
+                <li class="page-item{% if paginator.isFirstPage %} disabled{% endif %}">
+                    <a class="page-link"
+                       href="{% if paginator.isFirstPage %}#{% else %}/users?page={{ paginator.prevPage }}{% endif %}"
+                       tabindex="-1" aria-disabled="true">&laquo;</a>
+                </li>
+                {% set pageNo = 0 %}
+                {% for page in 0..paginator.pageCount - 1 %}
+                    {% set pageNo = pageNo + 1 %}
+                    <li class="page-item{% if pageNo == paginator.page %} active{% endif %}"{% if pageNo == paginator.page %} aria-current="page"{% endif %}>
+                        <a class="page-link" href="/users?page={{ pageNo }}">{{ pageNo }}</a></li>
+                {% endfor %}
+                <li class="page-item{% if paginator.isLastPage %} disabled{% endif %}">
+                    <a class="page-link"
+                       href="{% if paginator.isFirstPage %}#{% else %}/users?page={{ paginator.nextPage }}{% endif %}">&raquo;</a>
+                </li>
+            </ul>
+        </nav>
+    {% endif %}
 
 {% endblock %}
